  The methods will perform a search given a supplied filter, call ContextSource#getContext(dn, password),
  and optionally callback to a supplied instance to perform an LDAP operation on the 
  context.
 
* Re-used the same fix for LDAP-109 and LDAP-50 that was used in DefaultDirObjectFactory to secure
  the DirContextAdapter constructors from invalid CompositeNames.

Changes in version 1.3.0.RC1 (Oct 2008)
-------------------------------------------
* TLS connections are now supported using the DefaultTlsDirContextAuthenticationStrategy
  and ExternalTlsDirContextAuthenticationStrategy. (LDAP-8)

* NameNotFound is no longer silently ignored in searches. It is possible
  to use the old behavior by setting the ignoreNameNotFoundException property
  to true in LdapTemplate. (LDAP-134)
  
* Referrals can now be handled by setting the property 'Context.REFERRAL' 
  to 'follow' in the base context supplied to AbstractContextSource, provided
  that name servers are set up properly. Any DirContextAdapter instances
  resulting from referrals will provide the URL of the referred server in
  getReferralUrl(). (LDAP-136, LDAP-9)
  
* The hard dependency on LDAP Booster Pack has now been completely removed,
  preventing NoClassDefFoundErrors when using Paged Results without that
  library on the classpath. (LDAP-110, LDAP-118)
  
* The dreaded problem with '\' in Distinguished Names is now resolved.
  (LDAP-50, LDAP-109) 

* Added bind method that takes a DirContextOperations instance as parameter,
  performing the bind using the DN and Attributes from the DirContextOperations
  instance. (LDAP-140)

* DistinguishedName now returns compactly formatted String representations
  from toString, e.g.:
  cn=John Doe,ou=Company,c=Sweden
  rather than
  cn=John Doe, ou=Company, c=Sweden
  To keep using the old formatting (for backward compatibility) set the
  system property org.springframework.ldap.core.spacedDnFormat to true.
  (LDAP-138, LDAP-112, LDAP-91) 
